removed ABS partnership

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             <div class="hero-content">
                 <div>
                     <h1>Protect Your Home Investment with Expert Warranty Guidance</h1>
-                    <p>San Antonio's premier home warranty consulting service, specializing in new construction warranties with insider knowledge from Advanced Builder Solutions.</p>
+                    <p>San Antonio's premier home warranty consulting service, specializing in new construction warranties with exclusive insider knowledge of builder processes.</p>
                     <a href="#contact" class="cta-button">Schedule Your Free Consultation</a>
                 </div>
                 <div class="hero-stats">
@@ -544,7 +544,7 @@
                 <div class="service-card">
                     <div class="service-icon">⚡</div>
                     <h3>Emergency Support</h3>
-                    <p>Same-day consultation for urgent warranty issues. Direct escalation assistance with Advanced Builder Solutions.</p>
+                    <p>Same-day consultation for urgent warranty issues. Direct escalation strategies using our established industry connections.</p>
                     <div class="service-price">$99/hour</div>
                 </div>
             </div>
@@ -562,17 +562,17 @@
                 <div class="why-us-content">
                     <h3>Your Competitive Advantage</h3>
                     <ul class="why-us-list">
-                        <li>3+ years as warranty specialist for ALL major San Antonio builders</li>
+                        <li>3+ years as warranty specialist handling ALL major San Antonio builders</li>
                         <li>Direct experience with D.R. Horton, Lennar, Century Communities, Beazer, KB Homes</li>
                         <li>Insider knowledge of each builder's warranty procedures and timelines</li>
-                        <li>Established relationships with warranty departments</li>
+                        <li>Established professional relationships with warranty departments</li>
                         <li>Understanding of preventive maintenance to preserve warranty validity</li>
-                        <li>No competitor matches our comprehensive builder coverage</li>
+                        <li>Unmatched comprehensive builder coverage and process expertise</li>
                     </ul>
                 </div>
                 <div class="why-us-image">
-                    <h3>Advanced Builder Solutions Partnership</h3>
-                    <p style="margin-top: 1rem;">Our exclusive partnership with Advanced Builder Solutions gives us unparalleled access to builder information and warranty processes that no other consultant can match.</p>
+                    <h3>Industry Expertise</h3>
+                    <p style="margin-top: 1rem;">Our extensive experience working directly within the warranty industry gives us unparalleled access to builder information and warranty processes that no other consultant can match.</p>
                     <div style="margin-top: 2rem; font-size: 3rem;">🏆</div>
                 </div>
             </div>
@@ -629,7 +629,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Diaz Home Warranty Solutions</h3>
-                    <p>San Antonio's premier home warranty consulting service with exclusive Advanced Builder Solutions expertise.</p>
+                    <p>San Antonio's premier home warranty consulting service with exclusive industry expertise and builder connections.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Service Areas</h3>
