Update business name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diaz Home Warranty Solutions - San Antonio's Premier Warranty Consulting</title>
+    <title>Home Shield Advisory Group - San Antonio's Premier Warranty Consulting</title>
     <style>
         * {
             margin: 0;
@@ -471,7 +471,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">Diaz Home Warranty Solutions</div>
+            <div class="logo">Home Shield Advisory Group</div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
@@ -628,7 +628,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Diaz Home Warranty Solutions</h3>
+                    <h3>Home Shield Advisory Group</h3>
                     <p>San Antonio's premier home warranty consulting service with exclusive industry expertise and builder connections.</p>
                 </div>
                 <div class="footer-section">
@@ -645,7 +645,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Diaz Home Warranty Solutions. All rights reserved.</p>
+                <p>&copy; 2025 Home Shield Advisory Group. All rights reserved.</p>
             </div>
         </div>
     </footer>
