--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Shield Advisory Group - San Antonio's Premier Warranty Consulting</title>
+    <link rel "icon" href="/images/favicon.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -638,8 +639,8 @@
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <p>
-                        <a href="mailto:info@diazwarrantysolutions.com">info@diazwarrantysolutions.com</a><br>
-                        <a href="tel:210-555-0123">(210) 555-0123</a><br>
+                        <a href="mailto:info@homeshieldgroup.com">info@homeshieldgroup.com</a><br>
+                        <a href="tel:210-555-0123">(956) 249-2774</a><br>
                         San Antonio, TX
                     </p>
                 </div>
