--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Shield Advisory Group - San Antonio's Premier Warranty Consulting</title>
-    <link rel "icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <style>
         * {
             margin: 0;
